# mlx-turboquant

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  OPTIMIZATION_LOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml  test.yml
benchmarks/: bench_memory.py  bench_quality.py  bench_speed.py  bench_v06.py  micro_fused_qk.py  models.yaml  needle_haystack.py  needle_haystack_v06.py  needle_long_context.py  needle_results.md  run_full_suite.py
benchmarks/results_v06/: all.json  mlx-community__Qwen3-1.7B-4bit.json  mlx-community__Qwen3-8B-4bit.json  mlx-community__gemma-3-1b-it-4bit.json
docs/: FULL_FUSED_KERNEL_DESIGN.md  FUSED_ATTENTION_DESIGN.md  INTERNALS.md  attention_source_dump.txt
examples/: long_context_chat.py
mlx_turboquant/: __init__.py  cache.py  cli.py  codebook.py  kernels.py  packing.py  patch.py  qjl.py  quantizer.py  rotation.py
mlx_turboquant/codebooks/: codebook_d128_b1.npz  codebook_d128_b2.npz  codebook_d128_b3.npz  codebook_d128_b4.npz  codebook_d256_b2.npz  codebook_d256_b3.npz  codebook_d256_b4.npz  codebook_d64_b2.npz  codebook_d64_b4.npz  codebook_d96_b2.npz  codebook_d96_b4.npz
results/: needle_long_context.json  verify_new.json
results/tier2/: all.json  mlx-community__Llama-3.2-3B-Instruct-4bit.json  mlx-community__Qwen3-1.7B-4bit.json  mlx-community__Qwen3-4B-4bit.json  mlx-community__gemma-3-1b-it-4bit.json  mlx-community__gemma-3-4b-it-4bit.json
tests/: REAL_MODEL_RESULTS.md  test_edge_cases.py  test_fused_attention.py  test_fused_kernel_integration_tripwire.py  test_integration.py  test_phase1.py  test_phase2.py  test_smoke.py
