[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-turboquant"
version = "0.2.0"
description = "Near-optimal KV cache quantization for Apple Silicon using MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alexis Castellanos"},
]
keywords = ["mlx", "quantization", "kv-cache", "llm", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
codebooks = ["scipy>=1.10.0"]
dev = [
    "pytest>=7.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/alex-rentel/mlx-turboquant"
Repository = "https://github.com/alex-rentel/mlx-turboquant"

[project.scripts]
mlx-turboquant = "mlx_turboquant.cli:main"

[tool.setuptools.packages.find]
include = ["mlx_turboquant*"]

[tool.setuptools.package-data]
mlx_turboquant = ["codebooks/*.npz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that download and load real models"]
