[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-turboquant"
version = "1.0.3"
description = "Near-optimal KV cache quantization for Apple Silicon using MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Alexis Castellanos"},
]
keywords = [
    "mlx",
    "quantization",
    "kv-cache",
    "llm",
    "apple-silicon",
    "metal",
    "inference",
    "long-context",
    "turboquant",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
codebooks = ["scipy>=1.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.10.0",
    "ruff>=0.5",
    "pyright>=1.1.350",
]

[project.urls]
Homepage = "https://github.com/alex-rentel/mlx-turboquant"
Repository = "https://github.com/alex-rentel/mlx-turboquant"
Changelog = "https://github.com/alex-rentel/mlx-turboquant/blob/main/CHANGELOG.md"
Issues = "https://github.com/alex-rentel/mlx-turboquant/issues"
Documentation = "https://github.com/alex-rentel/mlx-turboquant/blob/main/README.md"

[project.scripts]
mlx-turboquant = "mlx_turboquant.cli:main"

[tool.setuptools.packages.find]
include = ["mlx_turboquant*"]

[tool.setuptools.package-data]
mlx_turboquant = ["codebooks/*.npz", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that download and load real models"]

[tool.coverage.run]
source = ["mlx_turboquant"]
omit = ["mlx_turboquant/cli.py"]  # CLI argparse paths exercised manually

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["dist", "build", "benchmarks/results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter / not always actionable for math-heavy code
    "B008",  # default-arg function calls (mx.array(...) defaults are intentional in our API)
]

[tool.pyright]
include = ["mlx_turboquant"]
exclude = ["**/__pycache__", "build", "dist"]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Darwin"
# cache.py uses runtime length-guards (`_compressed_len > 0`) that pyright
# cannot see; rather than refactor the whole file to narrow Optional fields,
# turn off the noisy Optional-narrowing rules and keep the high-signal ones
# (reportArgumentType — caught the int/float annotation bug pre-v1.0.1).
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalOperand = "none"
reportOptionalIterable = "none"
reportCallIssue = "none"
reportAssignmentType = "warning"
reportArgumentType = "error"
